# rpcIM

./: CMakeLists.txt  README.md  autobuild.sh
include/: chat.pb.h  friends.pb.h  user.pb.h
include/redis/: redis.hpp
include/service/: chatservice.hpp  friendservice.hpp  userservice.hpp
src/: chat.pb.cc  chat.proto  friends.pb.cc  friends.proto  user.pb.cc  user.proto
src/client/: CMakeLists.txt  callfriendservice.hpp  calluserservice.hpp  main.cc
src/server/model/: usermodel.cpp
src/server/service/: CMakeLists.txt
src/server/service/chatservice/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  chatservicemain.cpp
src/server/service/friendservice/: CMakeLists.txt  friendservice.cpp  friendservicemain.cpp
src/server/service/userservice/: CMakeLists.txt  userservice.cpp  userservicemain.cpp
